syntax = "proto3";

package controller.api.services.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/services;services";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "controller/api/resources/auth/v1/account.proto";

service AuthAccountService {

  // GetAuthAccount returns a stored AuthAccount if present. The provided request must
  // include the scope for the group being retrieved. If any of those ids are
  // missing, malformed or reference a non existing resource an error is
  // returned.
  rpc GetAuthAccount(GetAuthAccountRequest) returns (GetAuthAccountResponse) {
    option (google.api.http) = {
      get: "/v1/scopes/*/auth-methods/{auth_method_id}/accounts/{id}"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Gets a single AuthAccount"
    };
  }

  // ListAuthAccounts returns a list of stored groups which exist inside the org
  // referenced inside the request. The request must include the scope for
  // the groups being retrieved. If the scope is missing, malformed, or
  // references a non-existing scope, an error is returned.
  rpc ListAuthAccounts(ListAuthAccountsRequest) returns (ListAuthAccountsResponse) {
    option (google.api.http) = {
      get: "/v1/scopes/*/auth-methods/{auth_method_id}/accounts"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Lists all AuthAccounts"
    };
  }

  // CreateAuthAccount creates and stores a group in watchtower. The provided
  // request must include the scope ID in which the group will be created.
  // If the scope ID is missing, malformed or references a non existing
  // org, an error is returned. If a name is provided that is in
  // use in another group in the same scope, an error is returned.
  rpc CreateAuthAccount(CreateAuthAccountRequest) returns (CreateAuthAccountResponse) {
    option (google.api.http) = {
      post: "/v1/scopes/*/auth-methods/{auth_method_id}/accounts"
      body: "item"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Creates a single AuthAccount"
    };
  }

  // UpdateAuthAccount updates an existing group in watchtower. The provided group
  // must not have any read only fields set. The update mask must be included in
  // the request and contain at least 1 mutable field. To unset a field's value,
  // include the field in the update mask and don't set it in the provided
  // group. An error is returned if either the scope or group ids are missing or
  // reference a non-existing resource. An error is also returned if the
  // request attempts to update the name to one that is already in use in this
  // scope.
  rpc UpdateAuthAccount(UpdateAuthAccountRequest) returns (UpdateAuthAccountResponse) {
    option (google.api.http) = {
      patch: "/v1/scopes/*/auth-methods/{auth_method_id}/accounts/{id}"
      body: "item"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Updates a AuthAccount"
    };
  }

  // DeleteAuthAccount removes a group from Watchtower. If the provided scope or group
  // IDs are malformed or not provided an error is returned. No error is
  // returned if either IDs reference resources that do not exist as the
  // response itself specifies if the resource existed before the DeleteAuthAccount
  // request was received.
  rpc DeleteAuthAccount(DeleteAuthAccountRequest) returns (DeleteAuthAccountResponse) {
    option (google.api.http) = {
      delete: "/v1/scopes/*/auth-methods/{auth_method_id}/accounts/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Deletes a AuthAccount"
    };
  }
}

message GetAuthAccountRequest {
  string auth_method_id = 1;
  string id = 2;
  string view = 3;
}

message GetAuthAccountResponse {
  resources.auth.v1.Account item = 1;
}

message ListAuthAccountsRequest {
  string auth_method_id = 1;
  string view = 2;
}

message ListAuthAccountsResponse {
  repeated resources.auth.v1.Account items = 1;
}

message CreateAuthAccountRequest {
  string auth_method_id = 1;
  resources.auth.v1.Account item = 2;
}

message CreateAuthAccountResponse {
  string uri = 1;
  resources.auth.v1.Account item = 2;
}

message UpdateAuthAccountRequest {
  string auth_method_id = 1;
  string id = 2;
  resources.auth.v1.Account item = 3;
  google.protobuf.FieldMask update_mask = 4;
}

message UpdateAuthAccountResponse {
  resources.auth.v1.Account item = 1;
}

message DeleteAuthAccountRequest {
  string auth_method_id = 1;
  string id = 2;
}

message DeleteAuthAccountResponse {
  bool existed = 1;
}
